# BAOlab

./: .fits  CMakeLists.txt  LICENSE.CeCILL  README  VERSION
idl/: gather_covmatrix.pro  icosmoPS.pro  icosmoPS_grid.pro  likelihood.pro  mk_covmatrix.pro  mk_dens_max.pro  rmk_catalogue.pro  script.pro  sign_bao_detection.pro  transform_covmatrix.pro
input_files/model/: B_table.fits  Omegamh2_table.fits  alpha_table.fits  xi_lrg_BAO.fits  xi_lrg_nobaryons.fits  xi_lrg_nowiggles.fits
input_files/simu/: DR7-Full_selection.fits  LasDamas.fits  dr7.fits  mask_lambdaeta_no.fits  mask_lambdaeta_so.fits
lib/BAOlab_lib/: Array.h  DefMath.cc  DefPoint.cc  DefPoint.h  IM_IO.cc  Memory.cc
param/: cf.param  cf_alpha.param  delta_chi2.param  lognormal.param  lratio.param  ps_transform.param
src/bao_detection/: GlobalInc.h  IM_IO.h
src/cf/: DefPoint.h  SoftInfo.h  cf_obj.cc
src/cf_alpha/: cf_alpha.cc  cf_alpha.h  cf_alpha_obj.cc
src/lognormal/: DefMath.h  TempMemory.h  im_poisson.cc
